[package]
name = "bobo"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true      # Optimize at the link stage.

[dependencies]
axum = { version = "0.6.10", features = ["macros"] }
clap = { version = "4.2.2", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
notify = "5.1.0"
tokio = { version = "1.26.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "rt",
] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs"] }
tower-livereload = "0.7.3"
